--- a/FormattedTextEditor/FormattedTextEditor.vcxproj
+++ b/FormattedTextEditor/FormattedTextEditor.vcxproj
@@ -92,7 +92,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;_WINDOWS;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_WINDOWS;_DEBUG;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
     </ClCompile>
     <Link>
@@ -196,12 +196,10 @@
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="UCAppendBuffer.h" />
-    <ClInclude Include="UCPieceTableEntry.h" />
+    <ClInclude Include="USPieceTableEntry.h" />
     <ClInclude Include="UCPieceTableManager.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\MFCTextEditor\MFCTextEditor\UCAppendBuffer.cpp" />
-    <ClCompile Include="..\..\MFCTextEditor\MFCTextEditor\UCPieceTableManager.cpp" />
     <ClCompile Include="FormattedTextEditor.cpp" />
     <ClCompile Include="FormattedTextEditorDoc.cpp" />
     <ClCompile Include="FormattedTextEditorView.cpp" />
