Add "Relink" List, refactor & cleanup - remove dead code from pte enum - remove dead code from append buffer - refactor append buffer member variables - update ptm to use relink list

--- a/FormattedTextEditor/FormattedTextEditor.vcxproj
+++ b/FormattedTextEditor/FormattedTextEditor.vcxproj
@@ -196,6 +196,7 @@
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="UCAppendBuffer.h" />
+    <ClInclude Include="UCRelinkList.h" />
     <ClInclude Include="USPieceTableEntry.h" />
     <ClInclude Include="UCPieceTableManager.h" />
   </ItemGroup>
