--- a/FormattedTextEditor/FormattedTextEditor.vcxproj
+++ b/FormattedTextEditor/FormattedTextEditor.vcxproj
@@ -196,7 +196,10 @@
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="UCAppendBuffer.h" />
+    <ClInclude Include="UCLineManager.h" />
     <ClInclude Include="UCRelinkList.h" />
+    <ClInclude Include="UCRORelinkList.h" />
+    <ClInclude Include="USLineEntry.h" />
     <ClInclude Include="USPieceTableEntry.h" />
     <ClInclude Include="UCPieceTableManager.h" />
   </ItemGroup>
@@ -212,7 +215,9 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="UCAppendBuffer.cpp" />
+    <ClCompile Include="UCLineManager.cpp" />
     <ClCompile Include="UCPieceTableManager.cpp" />
+    <ClCompile Include="UCRORelinkList.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="FormattedTextEditor.reg" />
