--- a/FormattedTextEditor/FormattedTextEditor.vcxproj.filters
+++ b/FormattedTextEditor/FormattedTextEditor.vcxproj.filters
@@ -51,6 +51,15 @@
     <ClInclude Include="UCRelinkList.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="USLineEntry.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="UCRORelinkList.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="UCLineManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="FormattedTextEditor.cpp">
@@ -75,6 +84,12 @@
       <Filter>Header Files</Filter>
     </ClCompile>
     <ClCompile Include="UCPieceTableManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="UCRORelinkList.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="UCLineManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
