--- a/FormattedTextEditor/FormattedTextEditor.vcxproj
+++ b/FormattedTextEditor/FormattedTextEditor.vcxproj
@@ -196,12 +196,17 @@
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="UCAppendBuffer.h" />
+    <ClInclude Include="UCFontManager.h" />
     <ClInclude Include="UCLineManager.h" />
     <ClInclude Include="UCRelinkList.h" />
     <ClInclude Include="UCRORelinkList.h" />
+    <ClInclude Include="user_typedefs.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClInclude>
     <ClInclude Include="USLineEntry.h" />
     <ClInclude Include="USPieceTableEntry.h" />
     <ClInclude Include="UCPieceTableManager.h" />
+    <ClInclude Include="USCharPosition.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="FormattedTextEditor.cpp" />
@@ -215,6 +220,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="UCAppendBuffer.cpp" />
+    <ClCompile Include="UCFontManager.cpp" />
     <ClCompile Include="UCLineManager.cpp" />
     <ClCompile Include="UCPieceTableManager.cpp" />
     <ClCompile Include="UCRORelinkList.cpp" />
