--- a/FormattedTextEditor/FormattedTextEditor.vcxproj
+++ b/FormattedTextEditor/FormattedTextEditor.vcxproj
@@ -196,6 +196,7 @@
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="UCAppendBuffer.h" />
+    <ClInclude Include="UCSFontInfoManager.h" />
     <ClInclude Include="UCFontManager.h" />
     <ClInclude Include="UCLineManager.h" />
     <ClInclude Include="UCNonNullList.h" />
@@ -204,6 +205,7 @@
     <ClInclude Include="user_typedefs.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
     </ClInclude>
+    <ClInclude Include="USFontInfo.h" />
     <ClInclude Include="USLineEntry.h" />
     <ClInclude Include="USPieceTableEntry.h" />
     <ClInclude Include="UCPieceTableManager.h" />
@@ -221,10 +223,12 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="UCAppendBuffer.cpp" />
+    <ClCompile Include="UCSFontInfoManager.cpp" />
     <ClCompile Include="UCFontManager.cpp" />
     <ClCompile Include="UCLineManager.cpp" />
     <ClCompile Include="UCPieceTableManager.cpp" />
     <ClCompile Include="USCharPosition.cpp" />
+    <ClCompile Include="USFontInfo.cpp" />
     <ClCompile Include="USLineEntry.cpp" />
   </ItemGroup>
   <ItemGroup>
