--- a/FormattedTextEditor/FormattedTextEditor.vcxproj.filters
+++ b/FormattedTextEditor/FormattedTextEditor.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClInclude Include="UCSFontInfoManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="USFPieceTableAdd.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="FormattedTextEditor.cpp">
@@ -120,6 +123,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="UCSFontInfoManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="USFPieceTableAdd.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
