--- a/FormattedTextEditor/FormattedTextEditor.vcxproj
+++ b/FormattedTextEditor/FormattedTextEditor.vcxproj
@@ -196,8 +196,9 @@
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="UCAppendBuffer.h" />
+    <ClInclude Include="UCGrowableArray.h" />
+    <ClInclude Include="UCGrowableTcharArray.h" />
     <ClInclude Include="UCSFontInfoManager.h" />
-    <ClInclude Include="UCFontManager.h" />
     <ClInclude Include="UCLineManager.h" />
     <ClInclude Include="UCNonNullList.h" />
     <ClInclude Include="UCRelinkList.h" />
@@ -224,8 +225,9 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="UCAppendBuffer.cpp" />
+    <ClCompile Include="UCGrowableArray.cpp" />
+    <ClCompile Include="UCGrowableTcharArray.cpp" />
     <ClCompile Include="UCSFontInfoManager.cpp" />
-    <ClCompile Include="UCFontManager.cpp" />
     <ClCompile Include="UCLineManager.cpp" />
     <ClCompile Include="UCPieceTableManager.cpp" />
     <ClCompile Include="USCharPosition.cpp" />
