--- a/FormattedTextEditor/FormattedTextEditor.vcxproj.filters
+++ b/FormattedTextEditor/FormattedTextEditor.vcxproj.filters
@@ -54,9 +54,6 @@
     <ClInclude Include="UCLineManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="UCFontManager.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="user_typedefs.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -79,6 +76,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="USFPieceTableAdd.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="UCGrowableArray.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="UCGrowableTcharArray.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -110,9 +113,6 @@
     <ClCompile Include="UCLineManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="UCFontManager.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="USLineEntry.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -126,6 +126,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="USFPieceTableAdd.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="UCGrowableArray.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="UCGrowableTcharArray.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
