--- a/FormattedTextEditor/FormattedTextEditor.vcxproj
+++ b/FormattedTextEditor/FormattedTextEditor.vcxproj
@@ -195,14 +195,18 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="UCAbstractPieceTable.h" />
     <ClInclude Include="UCAppendBuffer.h" />
+    <ClInclude Include="UCConcretePieceTable.h" />
     <ClInclude Include="UCGrowableArray.h" />
     <ClInclude Include="UCGrowableTcharArray.h" />
+    <ClInclude Include="UCPieceTableAdder.h" />
+    <ClInclude Include="UCPieceTableReader.h" />
+    <ClInclude Include="UCPieceTableSplitMerger.h" />
     <ClInclude Include="UCSFontInfoManager.h" />
     <ClInclude Include="UCLineManager.h" />
     <ClInclude Include="UCNonNullList.h" />
     <ClInclude Include="UCRelinkList.h" />
-    <ClInclude Include="UCReadOnlyList.h" />
     <ClInclude Include="user_typedefs.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
     </ClInclude>
@@ -224,9 +228,14 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="UCAbstractPieceTable.cpp" />
     <ClCompile Include="UCAppendBuffer.cpp" />
+    <ClCompile Include="UCConcretePieceTable.cpp" />
     <ClCompile Include="UCGrowableArray.cpp" />
     <ClCompile Include="UCGrowableTcharArray.cpp" />
+    <ClCompile Include="UCPieceTableAdder.cpp" />
+    <ClCompile Include="UCPieceTableReader.cpp" />
+    <ClCompile Include="UCPieceTableSplitMerger.cpp" />
     <ClCompile Include="UCSFontInfoManager.cpp" />
     <ClCompile Include="UCLineManager.cpp" />
     <ClCompile Include="UCPieceTableManager.cpp" />
