--- a/FormattedTextEditor/FormattedTextEditor.vcxproj.filters
+++ b/FormattedTextEditor/FormattedTextEditor.vcxproj.filters
@@ -66,9 +66,6 @@
     <ClInclude Include="UCRelinkList.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="UCReadOnlyList.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="USFontInfo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -82,6 +79,21 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="UCGrowableTcharArray.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="UCPieceTableAdder.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="UCPieceTableSplitMerger.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="UCAbstractPieceTable.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="UCPieceTableReader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="UCConcretePieceTable.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -132,6 +144,21 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="UCGrowableTcharArray.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="UCPieceTableAdder.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="UCPieceTableSplitMerger.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="UCAbstractPieceTable.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="UCPieceTableReader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="UCConcretePieceTable.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
