--- a/FormattedTextEditor/FormattedTextEditor.vcxproj
+++ b/FormattedTextEditor/FormattedTextEditor.vcxproj
@@ -195,14 +195,10 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
-    <ClInclude Include="UCAbstractPieceTable.h" />
     <ClInclude Include="UCAppendBuffer.h" />
-    <ClInclude Include="UCConcretePieceTable.h" />
     <ClInclude Include="UCGrowableArray.h" />
     <ClInclude Include="UCGrowableTcharArray.h" />
-    <ClInclude Include="UCPieceTableAdder.h" />
-    <ClInclude Include="UCPieceTableReader.h" />
-    <ClInclude Include="UCPieceTableSplitMerger.h" />
+    <ClInclude Include="UCPieceTable.h" />
     <ClInclude Include="UCSFontInfoManager.h" />
     <ClInclude Include="UCLineManager.h" />
     <ClInclude Include="UCNonNullList.h" />
@@ -214,7 +210,7 @@
     <ClInclude Include="USFPieceTableAdd.h" />
     <ClInclude Include="USLineEntry.h" />
     <ClInclude Include="USPieceTableEntry.h" />
-    <ClInclude Include="UCPieceTableManager.h" />
+    <ClInclude Include="UCTextEditorDataManager.h" />
     <ClInclude Include="USCharPosition.h" />
   </ItemGroup>
   <ItemGroup>
@@ -228,17 +224,13 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="UCAbstractPieceTable.cpp" />
     <ClCompile Include="UCAppendBuffer.cpp" />
-    <ClCompile Include="UCConcretePieceTable.cpp" />
     <ClCompile Include="UCGrowableArray.cpp" />
     <ClCompile Include="UCGrowableTcharArray.cpp" />
-    <ClCompile Include="UCPieceTableAdder.cpp" />
-    <ClCompile Include="UCPieceTableReader.cpp" />
-    <ClCompile Include="UCPieceTableSplitMerger.cpp" />
+    <ClCompile Include="UCPieceTable.cpp" />
     <ClCompile Include="UCSFontInfoManager.cpp" />
     <ClCompile Include="UCLineManager.cpp" />
-    <ClCompile Include="UCPieceTableManager.cpp" />
+    <ClCompile Include="UCTextEditorDataManager.cpp" />
     <ClCompile Include="USCharPosition.cpp" />
     <ClCompile Include="USFontInfo.cpp" />
     <ClCompile Include="USFPieceTableAdd.cpp" />
