--- a/FormattedTextEditor/FormattedTextEditor.vcxproj
+++ b/FormattedTextEditor/FormattedTextEditor.vcxproj
@@ -196,6 +196,7 @@
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="UCAppendBuffer.h" />
+    <ClInclude Include="UCDataVisualiser.h" />
     <ClInclude Include="UCGrowableArray.h" />
     <ClInclude Include="UCGrowableTcharArray.h" />
     <ClInclude Include="UCPieceTable.h" />
@@ -225,6 +226,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="UCAppendBuffer.cpp" />
+    <ClCompile Include="UCDataVisualiser.cpp" />
     <ClCompile Include="UCGrowableArray.cpp" />
     <ClCompile Include="UCGrowableTcharArray.cpp" />
     <ClCompile Include="UCPieceTable.cpp" />
